--- a/blogging.html
+++ b/blogging.html
@@ -189,6 +189,7 @@
                 <option value="created_at.asc">Sort by: Oldest</option>
             </select>
             <button class="btn btn-secondary ml-3" onclick="window.location.href='dashboard.html'">Go to Dashboard</button>
+            <a class="btn btn-primary btn-add-category ml-3" href="categories.html">Categories</a>
             <button class="btn btn-success btn-add-blog ml-3" data-toggle="modal" data-target="#addBlogModal">Add Blog</button>
             <button class="btn btn-danger ml-3" onclick="logout()">Logout</button>
         </div>
