--- a/categories.html
+++ b/categories.html
@@ -158,6 +158,7 @@
         <div class="categories-header">
             <h2>Flower Categories</h2>
             <button class="btn btn-add-category" data-toggle="modal" data-target="#addCategoryModal">Add New Category</button>
+            <a class="btn btn-add-category" href="blogging.html">Add Blog</a>
             <button class="btn btn-danger m-3" onclick="logout()">Logout</button>
         </div>
 
