--- a/index.html
+++ b/index.html
@@ -146,17 +146,19 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="client_about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallary</a>
+                        <a class="nav-link" href="#">Gallery</a>
                     </li>
-            
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="client_blogs.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="client_contact.html">Contact</a>
                     </li>
                 </ul>
                 <button class="btn btn-warning ml-3">View Offers</button>
@@ -634,7 +636,8 @@
         async function fetchCategories() {
             const { data, error } = await supabaseClient
                 .from('categories')
-                .select('*');
+                .select('*')
+                .order('created_at', { ascending: true });
 
             if (error) {
                 console.error('Error fetching categories:', error);
