--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon_io/site.webmanifest">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    
 
     <style>
         /* Added CSS for video section to occupy half the viewport height */
@@ -433,62 +440,22 @@
                     <h2>Latest From Our Blog</h2>
                     <button class="btn all-posts-btn">All Posts</button>
                 </div>
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                        <div class="blog-card">
-                            <img src="https://iamosahan.com/wrapbootstrap-pillarix/flowersx/img/blog/blog-1.jpg" alt="Blog Image" class="blog-image">
-                            <div class="blog-content">
-                                <p class="blog-category">NATURE</p>
-                                <h3 class="blog-title">Quis Blandit Turpis Cursus Habitasse</h3>
-                                <p class="blog-text">Volutpat odio facilisis mauris sit amet massa vitae tortor. Semper risus in...</p>
-                                <div class="blog-author">
-                                    <img src="https://via.placeholder.com/40" alt="Author" class="author-image">
-                                    <p class="author-name">Patricia Clarks</p>
-                                </div>
-                            </div>
+                <div class="row" id="featuredBlogPosts">
+                    <!-- Featured blog posts will be inserted here -->
+                </div>
+                <div class="blog-slider mt-4">
+                    <div id="blogSlider" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner" id="blogSliderInner">
+                            <!-- Additional blog posts will be inserted here -->
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                        <div class="blog-card">
-                            <img src="https://iamosahan.com/wrapbootstrap-pillarix/flowersx/img/blog/blog-1.jpg" alt="Blog Image" class="blog-image">
-                            <div class="blog-content">
-                                <p class="blog-category">INTERIOR</p>
-                                <h3 class="blog-title">Pharetra Eutltrices Neque Ornare Aenean</h3>
-                                <p class="blog-text">Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Quam id leo...</p>
-                                <div class="blog-author">
-                                    <img src="https://via.placeholder.com/40" alt="Author" class="author-image">
-                                    <p class="author-name">John Doe</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                        <div class="blog-card">
-                            <img src="https://iamosahan.com/wrapbootstrap-pillarix/flowersx/img/blog/blog-1.jpg" alt="Blog Image" class="blog-image">
-                            <div class="blog-content">
-                                <p class="blog-category">NATURE</p>
-                                <h3 class="blog-title">Cras Semper Auctor Neque Vitae</h3>
-                                <p class="blog-text">Diam phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet. Nisl nisi...</p>
-                                <div class="blog-author">
-                                    <img src="https://via.placeholder.com/40" alt="Author" class="author-image">
-                                    <p class="author-name">Patricia Clarks</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                        <div class="blog-card">
-                            <img src="https://iamosahan.com/wrapbootstrap-pillarix/flowersx/img/blog/blog-1.jpg" alt="Blog Image" class="blog-image">
-                            <div class="blog-content">
-                                <p class="blog-category">INTERIOR</p>
-                                <h3 class="blog-title">Imperdiet Accumsan Sitamet Nulla</h3>
-                                <p class="blog-text">Quis vel eros donec ac. Nulla pharetra diam sit amet. Eget nunc...</p>
-                                <div class="blog-author">
-                                    <img src="https://via.placeholder.com/40" alt="Author" class="author-image">
-                                    <p class="author-name">Patricia Clarks</p>
-                                </div>
-                            </div>
-                        </div>
+                        <a class="carousel-control-prev" href="#blogSlider" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#blogSlider" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -579,6 +546,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const options = {
@@ -690,6 +658,129 @@
         }
 
         fetchCategories();
+
+        // blog section
+        async function fetchBlogPosts() {
+        const { data, error } = await supabaseClient
+            .from('blog_content')
+            .select('*')
+            .order('created_at', { ascending: false });
+
+        if (error) {
+            console.error('Error fetching blog posts:', error);
+            showFlashMessage('Failed to fetch blog posts. Please try again.', 'error');
+            return;
+        }
+
+        if (data.length === 0) {
+            showFlashMessage('No blog posts found.', 'info');
+            return;
+        }
+
+        const featuredPosts = data.slice(0, 4);
+        const sliderPosts = data.slice(4);
+
+        displayFeaturedPosts(featuredPosts);
+        displaySliderPosts(sliderPosts);
+    }
+
+    function truncateContent(content, maxWords = 20) {
+    const words = content.split(' ');
+    if (words.length > maxWords) {
+            return words.slice(0, maxWords).join(' ') + '...';
+        }
+        return content;
+    }
+
+    function formatDate(dateString) {
+        const options = { year: 'numeric', month: 'long', day: 'numeric' };
+        return new Date(dateString).toLocaleDateString(undefined, options);
+    }
+
+    function displayFeaturedPosts(posts) {
+        const featuredContainer = document.getElementById('featuredBlogPosts');
+        featuredContainer.innerHTML = '';
+
+        posts.forEach(post => {
+            const postHTML = `
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                    <div class="blog-card">
+                        <img src="${post.blog_img}" alt="blog img" class="blog-image">
+                        <div class="blog-content">
+                            <p class="blog-category">${post.blog_tag}</p>
+                            <h3 class="blog-title">${post.title}</h3>
+                            <p class="blog-text">${truncateContent(post.content)}</p>
+                            <a href="blog-detail.html?id=${post.id}" class="read-more">Read More</a>
+                            <div class="blog-footer">
+                                <p class="blog-date">${formatDate(post.created_at)}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            `;
+            featuredContainer.innerHTML += postHTML;
+        });
+    }
+
+    function displaySliderPosts(posts) {
+        const sliderContainer = document.getElementById('blogSliderInner');
+        sliderContainer.innerHTML = '';
+
+        posts.forEach((post, index) => {
+            const postHTML = `
+                <div class="carousel-item ${index === 0 ? 'active' : ''}">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="blog-card">
+                                <img src="${post.blog_img}" alt="${post.title}" class="blog-image">
+                                <div class="blog-content">
+                                    <p class="blog-category">${post.blog_tag}</p>
+                                    <h3 class="blog-title">${post.title}</h3>
+                                    <p class="blog-text">${truncateContent(post.content)}</p>
+                                    <a href="blog-detail.html?id=${post.id}" class="read-more">Read More</a>
+                                    <div class="blog-footer">
+                                        <p class="blog-date">${formatDate(post.created_at)}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            `;
+            sliderContainer.innerHTML += postHTML;
+            });
+
+            // Initialize the slider
+            initializeSlider();
+        }
+
+        function initializeSlider() {
+            // Use a library like Slick or Swiper to initialize the slider
+            // This is just a placeholder - replace with actual slider initialization code
+            $('.slider-container').slick({
+                slidesToShow: 3,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 3000,
+                responsive: [
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 2
+                        }
+                    },
+                    {
+                        breakpoint: 480,
+                        settings: {
+                            slidesToShow: 1
+                        }
+                    }
+                ]
+            });
+        }
+
+        // Call this function when the page loads
+        fetchBlogPosts();
 
     </script>
     
